--- a/index.html
+++ b/index.html
@@ -1,2 +1,111 @@
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8"/>
+    <title>stars test</title>
+    <style>
+    .box{
+        border: 1px solid #000;
+        padding: 5px;
+    }
+    .box .box{
+        margin-left: 10px;
+    }
+    .line{
+        padding: 10px 0;
+    }
+    .tip{
+        position: fixed;
+        top: 10px;
+        left:500px;
+        color: red;
+    }
+    input[type="text"]{
+        width: 200px;
+        line-height: 24px;
+        border: 1px solid #666;
+    }
+    .error{
+        border-color: red;
+    }
+    </style>
+</head>
+<body>
+    <div class="tip"></div>
+    <div class="test-form" data-stars-type="form">
+        <div class="box">
+            <div class="line">
+                <input type="checkbox" id="isCountry"/>所在国家信息
+            </div>
+
+            <div class="box">
+                <div class="line">
+                    国家名称：<input type="text" id="countryName" placeholder="国家"/>
+                </div>
+                <div class="line">
+                    <input type="checkbox" id="isProvince"/>所在省份信息
+                </div>
+
+                <div class="box">
+                    <div class="line">
+                        省份名称：<input type="text" id="provinceName" placeholder="省份"/>
+                    </div>
+                    <div class="line">
+                        <input type="checkbox" id="isCity"/>所在城市信息
+                    </div>
+
+                    <div class="box">
+                        <div class="line">
+                            城市名称：<input type="text" id="cityName" placeholder="城市">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <button id="btn">提交</button>
+    </div>
+</body>
+</html>
+
 <script src="jquery.js"></script>
 <script src="stars.js"></script>
+
+<script>
+
+with (stars){
+    var formControl = control('.test-form').add(
+        or(
+            control('#isCountry').addRule(not(required())),
+            and(
+                control('#isCountry').addRule(required()),
+                and(
+                    control('#countryName').addRule(required('请填写国家名称')),
+                    or(
+                        control('#isProvince').addRule(not(required())),
+                        and(
+                            control('#isProvince').addRule(required()),
+                            and(
+                                control('#provinceName').addRule(required('请填写省份名称')),
+                                or(
+                                    control('#isCity').addRule(not(required())),
+                                    and(
+                                        control('#isCity').addRule(required()),
+                                        control('#cityName').addRule(required('请填写城市名称'))
+                                    )
+                                )
+                            )
+                        )
+                    )
+                )
+            )
+        ).setTipEle('.tip')
+    )
+
+    $('#btn').on('click', function (){
+        if (formControl.check()){
+            alert('验证成功')
+        }
+    })
+}
+</script>
