--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         border: 1px solid #666;
     }
     .error{
-        border-color: red;
+        border-color: red!important;
     }
     </style>
 </head>
@@ -76,6 +76,7 @@
 <script>
 
 with (stars){
+    css.controlError = 'error'
     var formControl = control('.test-form').add(
         or(
             control('#isNotCountry').add(required()),
