--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <script>
 
 with (stars){
-    css.controlError = 'error'
+    //css.controlError = 'error'
     var formControl = control('.test-form').add(
         or(
             control('#isNotCountry').add(required()),
