为了更正式一些，更新stars为Stars

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>stars test</title>
+    <title>Stars test</title>
     <style>
     .box{
         border: 1px solid #000;
@@ -32,7 +32,7 @@
 </head>
 <body>
     <div class="tip"></div>
-    <div class="test-form" data-stars-type="form">
+    <div class="test-form" data-Stars-type="form">
         <div class="box">
             <div class="line">
                 <input type="radio" name="country" id="isNotCountry" checked/>不选择国家
@@ -71,11 +71,11 @@
 </html>
 
 <script src="jquery.js"></script>
-<script src="stars.js"></script>
+<script src="Stars.js"></script>
 
 <script>
 
-with (stars){
+with (Stars){
     //css.controlError = 'error'
     var formControl = control('.test-form').add(
         or(
