修正更名时候一些bug

--- a/complex.html
+++ b/complex.html
@@ -33,22 +33,22 @@
 </head>
 <body>
     <div class="tip"></div>
-    <div class="test-form" data-Stars-type="form">
+    <div class="test-form" data-stars-type="form">
 
         <!--简单mode-->
         <div class="box">
-            <input type="text" data-Stars-rules="required" data-Stars-msg="必填" data-Stars-tipEle=".msg1" placeholder="必填"/>
+            <input type="text" data-stars-rules="required" data-stars-msg="必填" data-stars-tipEle=".msg1" placeholder="必填"/>
             <div class="msg msg1"></div>
         </div>
         <div class="box">
-            <input type="text" data-Stars-rules="empty phone" data-Stars-msg="请填写正确的手机号" data-Stars-tipEle=".msg2" placeholder="手机号(可为空)"/>
+            <input type="text" data-stars-rules="empty phone" data-stars-msg="请填写正确的手机号" data-stars-tipEle=".msg2" placeholder="手机号(可为空)"/>
             <div class="msg msg2"></div>
         </div>
         <div class="box">
-            <input type="text" data-Stars-rules="number range_5_11" data-Stars-msg="请填写5到10个数字" placeholder="5到10个数字"/>
+            <input type="text" data-stars-rules="number range_5_11" data-stars-msg="请填写5到10个数字" placeholder="5到10个数字"/>
         </div>
         <div class="box">
-            <input type="text" data-Stars-rules="regexp_^[a-z]{3,5}$" data-Stars-msg="请填写3-5个字母" placeholder="3到5个字母"/>
+            <input type="text" data-stars-rules="regexp_^[a-z]{3,5}$" data-stars-msg="请填写3-5个字母" placeholder="3到5个字母"/>
         </div>
 
         <!--复杂mode-->
