想到一个好办法，把IORule.check转换为同步方法，整个模型就统一了。

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <script>
 
 with (Stars){
-    //css.controlError = 'error'
+    css.controlError = 'error'
     var formControl = control('.test-form').add(
         or(
             control('#isNotCountry').add(required()),
