更新测试用例

--- a/test/index.html
+++ b/test/index.html
@@ -41,7 +41,7 @@
 
             <div class="box">
                 <div class="line">
-                    国家名称：<input type="text" id="countryName" placeholder="国家名称"/><span id="countryNameTip"></span>
+                    国家名称：<input type="text" id="countryName" placeholder="国家名称"/><span style="color:red" id="countryNameTip"></span>
                     国家代号：<input type="text" id="countryCode" placeholder="国家代号"/>
                 </div>
                 <div class="line">
