--- a/test/radioTest.html
+++ b/test/radioTest.html
@@ -4,22 +4,6 @@
     <meta charset="utf-8"/>
     <title>Stars test</title>
     <style>
-    .box{
-        border: 1px solid #000;
-        padding: 5px;
-    }
-    .box .box{
-        margin-left: 10px;
-    }
-    .line{
-        padding: 10px 0;
-    }
-    .tip{
-        position: fixed;
-        top: 10px;
-        left:500px;
-        color: red;
-    }
     input[type="text"]{
         width: 200px;
         line-height: 24px;
@@ -28,44 +12,90 @@
     .control-error{
         border-color: red!important;
     }
+    .error{
+        color: red;
+    }
     </style>
 </head>
 <body>
-<dl>
-    <input type="radio" name="radio1" class="radio1"> <input type="input1" class="input1"/><br>
-    <input type="radio" name="radio1" class="radio2"> <input type="input2" class="input2"/><br>
+    <div class="g-radio-group">
+        <input type="checkbox" id="checkbox1"/>
+        <div>
+            <input type="radio" name="radio" id="radio1"/>
+            超过退房时间后<input type="text" id="input1"/>
+            点前加收半天房费<input type="text" id="input2"/>元,
+            <input type="text" id="input3"/>
+            点后加收全天房费
+            <input type="text" id="input4"/>元
+        </div>
 
-    <span class="tip"></span>
+        <div>
+            <input type="radio" name="radio" id="radio2"/>
+            超过退房时间后<input type="text" id="input5"/>
+            点前加收房费<input type="text" id="input6"/>元/小时,
+            <input type="text" id="input7"/>
+            点后加全天房费
+            <input type="text" id="input8"/>元
+        </div>
+
+        <div class="error"></div>
+        <button class="btn">提交</button>
+    </div>
 </body>
 </html>
 
 <script src="jquery.js"></script>
 <script src="../src/Stars.js"></script>
 <script>
+var numReg = /^\d+$/
+var isHour = function (control){
+    var hour = ~~control.val()
+    hour = ~~hour
+    return hour>0 && hour<24
+}
 
+var requiredTip = '不能为空'
+var numTip = '必须正整数'
+var hourTip = '时间必须在0~23点之间'
+
+var myControl
 with (Stars){
-    xx = and(
-        or(
-            control('.radio1').add(required('必选')),
-            control('.radio2').add(required('必选'))
-        ),
-        and(
+     myControl = or(
+        control('#checkbox1').add(not(required())),
+         and(
+            control('#checkbox1').add(required()),
             or(
-                control('.radio1').add(not(required())),
-                and(
-                    control('.radio1').add(required()),
-                    control('.input1').add(required())
-                )
+                control('#radio1').add(required('至少选一个')),
+                control('#radio2').add(required('至少选一个'))
             ),
-            or(
-                control('.radio2').add(not(required())),
-                and(
-                    control('.radio2').add(required()),
-                    control('.input2').add(required())
+            and(
+                or(
+                    control('#radio1').add(not(required())),
+                    and(
+                        control('#radio1').add(required()),
+                        control('#input1').add(required(requiredTip), rule(numReg, numTip), rule(isHour, hourTip)),
+                        control('#input2').add(required(requiredTip), rule(numReg, numTip)),
+                        control('#input3').add(required(requiredTip), rule(numReg, numTip), rule(isHour, hourTip)),
+                        control('#input4').add(required(requiredTip), rule(numReg, numTip))
+                    )
+                ),
+                or(
+                    control('#radio2').add(not(required())),
+                    and(
+                        control('#radio2').add(required()),
+                        control('#input5').add(required(requiredTip), rule(numReg, numTip), rule(isHour, hourTip)),
+                        control('#input6').add(required(requiredTip), rule(numReg, numTip)),
+                        control('#input7').add(required(requiredTip), rule(numReg, numTip), rule(isHour, hourTip)),
+                        control('#input8').add(required(requiredTip), rule(numReg, numTip))
+                    )
                 )
             )
         )
-    ).setTipEle('.tip')
+    ).setTipEle('.error')
 }
+
+$('.btn').on('click', function (){
+    alert(myControl.check())
+})
 </script>
 
